--- a/public/css.css
+++ b/public/css.css
@@ -1,7 +1,6 @@
 
 body { 
     background: url(news1.jpg) no-repeat center center fixed;
-    -webkit-background-size: 
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
@@ -18,6 +17,7 @@ body {
     margin-left: 30%;
     margin-right: 30%;
     padding: 30px;
+    
 }
 
 .btn {
@@ -25,8 +25,17 @@ body {
     font-size: 15px;
     height: 40px;
     width: 150px;
+    margin-left: 30px; 
+    background-color: darkslategray;
+    border-color: darkgrey;
+    color: lightgrey 
 }
 
 .top { 
     margin-top: 50px;
+}
+
+h5:hover { 
+    color: red;
+    cursor: pointer;
 }
