--- a/public/css.css
+++ b/public/css.css
@@ -42,7 +42,9 @@ h5:hover {
 
 #addArticleInfoHere { 
     font-size: 30px;
+    text-decoration: none;
 }
+
 
 .article-link { 
     font-size: 20px;
